--- a/core/template/scenario/event.default.html
+++ b/core/template/scenario/event.default.html
@@ -2,21 +2,21 @@
 	<span class="input-group-addon roundedLeft" style="width: 100px">{{Commande}}</span>
 	<input class="expressionAttr form-control input-sm" data-l1key="options" data-l2key="cmd" placeholder="Commande" value="#cmd#" data-cmd_id="#id#" data-uid="#uid#"/>
 	<span class="input-group-btn">
-		<a class="btn btn-default form-control listEquipementInfo1" data-cmd_id="#id#" data-uid="#uid#"><i class="fas fa-list-alt"></i></a>
+		<a class="btn btn-default form-control listCmdInfo" data-cmd_id="#id#" data-uid="#uid#"><i class="fas fa-list-alt"></i></a>
 	</span>
 	<span class="input-group-addon" style="width: 100px">{{Valeur}}</span>
 	<input class="expressionAttr form-control input-sm" data-l1key="options" data-l2key="value" placeholder="Valeur" value="#value#" data-cmd_id="#id#" data-uid="#uid#"/>
 	<span class="input-group-btn">
-		<button class="btn btn-default listEquipementInfo2 roundedRight" type="button" tooltip="{{Sélectionner la commande}}" data-cmd_id="#id#" data-uid="#uid#"><i class="fas fa-list-alt"></i></button>
+		<button class="btn btn-default listCmdInfo2 roundedRight" type="button" tooltip="{{Sélectionner la commande}}" data-cmd_id="#id#" data-uid="#uid#"><i class="fas fa-list-alt"></i></button>
 	</span>
 </div>
 <script>
-	$('.listEquipementInfo1[data-uid=#uid#]').off().on('click', function () {
+	$('.listCmdInfo[data-uid=#uid#]').off().on('click', function () {
 		jeedom.cmd.getSelectModal({cmd: {type: 'info'}}, function (result) {
 			$('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=cmd]').value(result.human);
 		});
 	});
-	$('.listEquipementInfo2[data-uid=#uid#]').off().on('click', function () {
+	$('.listCmdInfo2[data-uid=#uid#]').off().on('click', function () {
 		jeedom.cmd.getSelectModal({cmd: {type: 'info'}}, function (result) {
 			$('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=value]').atCaret('insert', result.human);
 		});
