--- a/core/template/scenario/cmd.action.color.default.html
+++ b/core/template/scenario/cmd.action.color.default.html
@@ -3,11 +3,11 @@
   <input type="color" class="form-control input-sm cursor colorChooser" data-uid="#uid#" value="#color#" style="width: 20%; display: inline-block;"/>
   <input class="expressionAttr form-control input-sm" data-l1key="options" data-l2key="color" value="#color#" data-uid="#uid#" style="width: 80%; display: inline-block;" placeholder="Couleur (hexa)"/>
   <span class="input-group-btn">
-    <button class="btn btn-default listEquipementInfo roundedRight" type="button" tooltip="{{Sélectionner la commande}}" data-uid="#uid#" data-cmd_id="#id#"><i class="fas fa-list-alt"></i></button>
+    <button class="btn btn-default listCmdInfo roundedRight" type="button" tooltip="{{Sélectionner la commande}}" data-uid="#uid#" data-cmd_id="#id#"><i class="fas fa-list-alt"></i></button>
   </span>
 </div>
 <script>
-  $('.listEquipementInfo[data-uid=#uid#]').off('click').on('click', function () {
+  $('.listCmdInfo[data-uid=#uid#]').off('click').on('click', function () {
     var el = $(this);
     jeedom.cmd.getSelectModal({cmd: {type: 'info'}}, function (result) {
       $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=color]').value(result.human);
