--- a/core/template/scenario/cmd.action.message.default.html
+++ b/core/template/scenario/cmd.action.message.default.html
@@ -8,7 +8,7 @@
 	<span class="input-group-addon roundedLeft" style="width: 100px">#message_placeholder#</span>
 	<textarea class="message expressionAttr form-control ta_autosize" data-l1key="options" data-l2key="message" rows="1" style="resize:vertical;" data-cmd_id="#id#" data-uid="#uid#">#message#</textarea>
 	<span class="input-group-addon hasBtn roundedRight">
-		<button class="btn btn-default roundedRight listEquipementInfo" type="button" tooltip="{{Sélectionner la commande}}" data-cmd_id="#id#"  data-uid="#uid#"><i class="fas fa-list-alt"></i></button>
+		<button class="btn btn-default roundedRight listCmdMessage" type="button" tooltip="{{Sélectionner la commande}}" data-cmd_id="#id#"  data-uid="#uid#"><i class="fas fa-list-alt"></i></button>
 	</span>
 </div>
 
@@ -19,7 +19,7 @@
 	if('#message_disable#' == '1'){
 		$('.expressionAttr[data-l1key=options][data-l2key=message][data-uid=#uid#]').parent().hide();
 	}
-	$('.listEquipementInfo[data-uid=#uid#]').on('click', function() {
+	$('.listCmdMessage[data-uid=#uid#]').on('click', function() {
 		if('#message_cmd_subtype#' != ''){
 			jeedom.cmd.getSelectModal({cmd: {type: '#message_cmd_type#',subType : '#message_cmd_subtype#'}}, function(result) {
 				$('.expressionAttr[data-l1key=options][data-l2key=message][data-uid=#uid#]').atCaret('insert', result.human);
