--- a/core/template/scenario/cmd.action.slider.default.html
+++ b/core/template/scenario/cmd.action.slider.default.html
@@ -2,12 +2,12 @@
   <span class="input-group-addon roundedLeft" style="width: 100px">#slider_placeholder#</span>
   <input value="#slider#" class="expressionAttr form-control input-sm" data-l1key="options" data-l2key="slider" data-cmd_id="#id#" data-uid="#uid#" />
   <span class="input-group-btn">
-    <button class="btn btn-default listEquipementInfo roundedRight" type="button" tooltip="{{Sélectionner la commande}}" data-cmd_id="#id#"  data-uid="#uid#"><i class="fas fa-list-alt"></i></button>
+    <button class="btn btn-default listCmdInfo roundedRight" type="button" tooltip="{{Sélectionner la commande}}" data-cmd_id="#id#"  data-uid="#uid#"><i class="fas fa-list-alt"></i></button>
   </span>
 </div>
 
 <script>
-  $('.listEquipementInfo[data-uid=#uid#]').off('click').on('click', function() {
+  $('.listCmdInfo[data-uid=#uid#]').off('click').on('click', function() {
     jeedom.cmd.getSelectModal({cmd: {type: 'info'}}, function(result) {
       $('.expressionAttr[data-l1key=options][data-l2key=slider][data-uid=#uid#]').atCaret('insert', result.human);
     });
