--- a/core/template/scenario/log.default.html
+++ b/core/template/scenario/log.default.html
@@ -2,11 +2,11 @@
   <span class="input-group-addon roundedLeft" style="width: 100px">{{Message}}</span>
   <textarea class="message expressionAttr form-control ta_autosize" data-l1key="options" data-l2key="message" rows="1" style="resize:vertical;" placeholder="Message" data-cmd_id="#id#" data-uid="#uid#">#message#</textarea>
   <span class="input-group-addon hasBtn roundedRight">
-    <button class="btn btn-default roundedRight listEquipementInfo" type="button" tooltip="{{Sélectionner la commande}}" data-cmd_id="#id#"  data-uid="#uid#"><i class="fas fa-list-alt"></i></button>
+    <button class="btn btn-default roundedRight listCmdInfo" type="button" tooltip="{{Sélectionner la commande}}" data-cmd_id="#id#"  data-uid="#uid#"><i class="fas fa-list-alt"></i></button>
   </span>
 </div>
 <script>
-  $('.listEquipementInfo[data-uid=#uid#]').off('click').on('click', function() {
+  $('.listCmdInfo[data-uid=#uid#]').off('click').on('click', function() {
     jeedom.cmd.getSelectModal({cmd: {type: 'info'}}, function(result) {
       $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=message]').atCaret('insert', result.human);
     });
