--- a/core/template/scenario/variable.default.html
+++ b/core/template/scenario/variable.default.html
@@ -4,11 +4,11 @@
   <span class="input-group-addon" style="width: 100px">{{Valeur}}</span>
   <input class="expressionAttr form-control input-sm autoCompleteCondition" data-l1key="options" data-l2key="value" placeholder="Valeur" value="#value#" data-uid="#uid#"/>
   <span class="input-group-btn">
-    <button class="btn btn-default listEquipementInfo roundedRight" type="button" tooltip="{{Sélectionner la commande}}" data-uid="#uid#"><i class="fas fa-list-alt"></i></button>
+    <button class="btn btn-default listCmdInfo roundedRight" type="button" tooltip="{{Sélectionner la commande}}" data-uid="#uid#"><i class="fas fa-list-alt"></i></button>
   </span>
 </div>
 <script>
-  $('.listEquipementInfo[data-uid=#uid#]').off('click').on('click', function () {
+  $('.listCmdInfo[data-uid=#uid#]').off('click').on('click', function () {
     jeedom.cmd.getSelectModal({cmd: {type: 'info'}}, function (result) {
       $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=value]').atCaret('insert', result.human);
     });
