--- a/core/template/scenario/wait.default.html
+++ b/core/template/scenario/wait.default.html
@@ -2,7 +2,7 @@
   <span class="input-group-addon roundedLeft" style="width: 100px">{{Condition}}</span>
   <textarea class="message expressionAttr form-control ta_autosize" data-l1key="options" data-l2key="condition" rows="1" style="resize:vertical;" placeholder="Condition" data-cmd_id="#id#" data-uid="#uid#">#condition#</textarea>
   <span class="input-group-addon hasBtn roundedRight">
-    <button class="btn btn-default listEquipementInfo roundedRight" type="button" tooltip="{{Sélectionner la commande}}" data-cmd_id="#id#" data-uid="#uid#"><i class="fas fa-list-alt"></i></button>
+    <button class="btn btn-default listCmdInfo roundedRight" type="button" tooltip="{{Sélectionner la commande}}" data-cmd_id="#id#" data-uid="#uid#"><i class="fas fa-list-alt"></i></button>
   </span>
 
 </div>
@@ -11,7 +11,7 @@
   <input value="#timeout#" class="expressionAttr form-control input-sm roundedRight" data-l1key="options" data-l2key="timeout" data-cmd_id="#id#" data-uid="#uid#"/>
 </div>
 <script>
-  $('.listEquipementInfo[data-uid=#uid#]').off('click').on('click', function () {
+  $('.listCmdInfo[data-uid=#uid#]').off('click').on('click', function () {
     jeedom.cmd.getSelectModal({cmd: {type: 'info'}}, function (result) {
       $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=condition]').atCaret('insert', result.human);
     });
