--- a/core/template/scenario/widget.default.html
+++ b/core/template/scenario/widget.default.html
@@ -1,5 +1,5 @@
 <input class="expressionAttr form-control input-sm" data-l1key="options" data-l2key="eqLogic" data-option_id="#id#" data-uid="#uid#" style="width: 35%; display: inline-block;" value="#eqLogic#"/>
-<a class="btn btn-default btn-sm listEquipementInfo cursor" data-cmd_id="#id#" data-uid="#uid#" style="display: inline-block;"><i class="fas fa-list-alt"></i></a>
+<a class="btn btn-default btn-sm listCmdInfo cursor" data-cmd_id="#id#" data-uid="#uid#" style="display: inline-block;"><i class="fas fa-list-alt"></i></a>
 <select class="expressionAttr form-control input-sm" data-l1key="options" data-l2key="action" data-option_id="#id#" data-uid="#uid#" style="width: 35%; display: inline-block;">
   <option value="show">{{Visible}}</option>
   <option value="hide">{{Masquer}}</option>
@@ -11,7 +11,7 @@
   if ($('.expressionAttr[data-option_id=#id#][data-uid=#uid#][data-l1key=options][data-l2key=action] option[value=#action#]').html() != undefined) {
     $('.expressionAttr[data-option_id=#id#][data-uid=#uid#][data-l1key=options][data-l2key=action]').value('#action#');
   }
-  $('.listEquipementInfo[data-uid=#uid#]').on('click', function() {
+  $('.listCmdInfo[data-uid=#uid#]').on('click', function() {
     jeedom.eqLogic.getSelectModal({cmd: {type: 'info'}}, function(result) {
       $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=eqLogic]').value(result.human);
     });
