--- a/core/template/mobile/cmd.info.numeric.horizontal.html
+++ b/core/template/mobile/cmd.info.numeric.horizontal.html
@@ -9,17 +9,21 @@
 	<script>
 		jeedom.cmd.update['#id#'] = function(_options){
 			var position = _options.display_value
-            var minValue = ('#minValue#' == '') ? 0 : parseInt('#minValue#')
-            var maxValue = ('#maxValue#' == '') ? 100 : parseInt('#maxValue#')
-            if (position > maxValue) position = maxValue
-            if (position < minValue) position = minValue
+			var minValue = ('#minValue#' == '') ? 0 : parseInt('#minValue#')
+			var maxValue = ('#maxValue#' == '') ? 100 : parseInt('#maxValue#')
+			if (position > maxValue) position = maxValue
+			if (position < minValue) position = minValue
 
-            var width = ((position - minValue) * 100) / (maxValue - minValue)
-            width = Math.round(parseFloat(width) * 10) / 10
+			var width = ((position - minValue) * 100) / (maxValue - minValue)
+			width = Math.round(parseFloat(width) * 10) / 10
 			$('.cmd[data-cmd_uid=#uid#] .hgauge-value').width(width+'%')
 			$('.cmd[data-cmd_uid=#uid#] .state strong').first().text(_options.display_value)
 		}
 
 		jeedom.cmd.update['#id#']({display_value:'#state#'});
+
+		if ('#color#' != '') {
+			 $('.cmd[data-cmd_id=#id#] .hgauge-value').css('background', '#color#')
+		}
 	</script>
 </div>
