--- a/desktop/css/coreWidgets.css
+++ b/desktop/css/coreWidgets.css
@@ -316,24 +316,22 @@ Desktop
   label.binarySwitch input {
     display: none;
   }
-  label.binarySwitch > input:checked + span.binarySwitch:before {
-    transform: translateX(17px);
-  }
   span.binarySwitch {
     border-radius: 1em;
   }
-  span.binarySwitch:before {
-    border-radius: 50%;
-  }
-  span.binarySwitch:before {
+  span.binarySwitchHandle {
     position: absolute;
-    content: "";
     height: 16px;
     width: 16px;
     left: 4px;
     bottom: 2px;
     background-color: var(--link-color);
     transition: .4s;
+    border-radius: 50%;
+  }
+  label.binarySwitch > input:checked + span.binarySwitch > span.binarySwitchHandle {
+    left: unset;
+    right: 4px !important;
   }
   label.binarySwitch > input + span.binarySwitch {
     position: absolute;
@@ -351,7 +349,7 @@ Desktop
   [data-coloredicons="1"] label.binarySwitch > input:checked + span.binarySwitch {
     background-color: var(--bt-success-color);
   }
-  [data-theme="core2019_Dark"][data-coloredicons="1"] label.binarySwitch input:checked + span.binarySwitch:before {
+  [data-theme="core2019_Dark"][data-coloredicons="1"] label.binarySwitch > input:checked + span.binarySwitch > span.binarySwitchHandle {
     background-color: var(--btnEq-default-color) !important;
   }
 
