--- a/core/template/dashboard/cmd.action.other.binarySwitch.html
+++ b/core/template/dashboard/cmd.action.other.binarySwitch.html
@@ -3,38 +3,49 @@
     <span class="cmdName #hide_name#">#valueName#</span>
     <label class="binarySwitch">
       <input type="checkbox" class="binarySwitch">
-      <span class="binarySwitch"></span>
+      <span class="binarySwitch">
+        <span class="binarySwitchHandle"></span>
+      </span>
     </label>
   </div>
   <script>
-    var check#uid#
-    jeedom.cmd.update['#id#'] = function(_options) {
-      var cmd = $('.cmd[data-cmd_id=#id#]')
-      cmd.find('.cmdName.hidden').parent().removeClass('widthx2')
-      if (_options.display_value == '1' || _options.display_value == 1 || _options.display_value == '99' || _options.display_value == 99 || _options.display_value == 'on') {
-        check#uid# = false
-        if (jeedom.cmd.normalizeName('#name#') == 'on') {
-          cmd.hide()
-        } else {
-          cmd.show()
-        }
-      } else if (_options.display_value == '0' || _options.display_value == 0 ||  _options.display_value == 'off') {
-        check#uid# = true
-        if (jeedom.cmd.normalizeName('#name#') == 'off') {
-          cmd.hide()
-        } else {
-          cmd.show()
-        }
-      }
-      cmd.find('input.binarySwitch').prop("checked", !check#uid#)
+    //if not name, centered:
+    $('.cmd[data-cmd_id=#id#]').find('.cmdName.hidden').parent().removeClass('widthx2')
+
+    if ('#color#' != '') {
+      $('.cmd[data-cmd_uid=#uid#] span.binarySwitch').css('background', '#color#')
+    }
+    if ('#color_switch#' != '') {
+      $('.cmd[data-cmd_uid=#uid#] span.binarySwitchHandle').style('background-color', '#color_switch#', 'important')
     }
 
-    jeedom.cmd.update['#id#']({display_value:'#state#'})
 
-    $('.cmd[data-cmd_uid=#uid#] input.binarySwitch').off().on('click', function (event) {
+    jeedom.cmd.update['#id#'] = function(_options) {
+      if (['1', 1, '99', 99, 'on'].includes(_options.display_value)) {
+        if (jeedom.cmd.normalizeName('#name#') == 'on') {
+          $('.cmd[data-cmd_id=#id#]').hide()
+        } else {
+          $('.cmd[data-cmd_id=#id#]').show()
+        }
+        $('.cmd[data-cmd_id=#id#]').find('input.binarySwitch').prop('checked', true)
+
+      } else if (['0', 0, 'off'].includes(_options.display_value)) {
+        if (jeedom.cmd.normalizeName('#name#') == 'off') {
+          $('.cmd[data-cmd_id=#id#]').hide()
+        } else {
+          $('.cmd[data-cmd_id=#id#]').show()
+        }
+        $('.cmd[data-cmd_id=#id#]').find('input.binarySwitch').prop('checked', false)
+      }
+    }
+
+    jeedom.cmd.update['#id#']({display_value: '#state#'})
+
+    $('.cmd[data-cmd_uid=#uid#] span.binarySwitch').off().on('click', function (event) {
+      jeedom.cmd.execute({id: '#id#'})
       event.preventDefault()
       event.stopPropagation()
-      jeedom.cmd.execute({id: '#id#'})
     })
+
   </script>
 </div>
