--- a/core/template/dashboard/cmd.info.numeric.default.html
+++ b/core/template/dashboard/cmd.info.numeric.default.html
@@ -100,6 +100,11 @@
   } else {
     $('.cmd[data-cmd_uid=#uid#] .gauge').append('<center><span class="label label-danger">#state#</span></center>')
   }
+
+  if ('#color#' != '') {
+    $('.cmd[data-cmd_id=#id#] .highcharts-color-0').css('fill', '#color#')
+  }
+
 </script>
 
 </div>
