--- a/core/template/dashboard/cmd.info.numeric.compass.html
+++ b/core/template/dashboard/cmd.info.numeric.compass.html
@@ -19,7 +19,7 @@
     jeedom.cmd.update['#id#'] = function(_options){
       let cmd = $('.cmd[data-cmd_id=#id#]');
       cmd.attr('title','{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate+'<br/>{{Valeur}} : '+_options.display_value+'°')
-      let directions = ['Nord', 'Nord-Est', 'Est', 'Sud-Est', 'Sud', 'Sud-Ouest', 'Ouest', 'Nord-Ouest'];
+      let directions#id# = ['{{Nord}}', '{{Nord-Est}}', '{{Est}}', '{{Sud-Est}}', '{{Sud}}', '{{Sud-Ouest}}', '{{Ouest}}', '{{Nord-Ouest}}']
       let windDir = directions[Math.round(((_options.display_value %= 360) < 0 ? _options.display_value + 360 : _options.display_value) / 45) % 8];
       cmd.find('.widget-compass-needle').css('transform', 'rotate(' + _options.display_value +'deg)');
       cmd.find('.state').text(_options.display_value.toString()+'°')
