--- a/core/template/widgets.html
+++ b/core/template/widgets.html
@@ -12,3 +12,11 @@ scenario.class.php toHtml() -> translate::exec($content, 'core/template/widgets.
 {{Min}}
 {{Moyenne}}
 {{Max}}
+{{Nord}}
+{{Nord-Est}}
+{{Est}}
+{{Sud-Est}}
+{{Sud}}
+{{Sud-Ouest}}
+{{Ouest}}
+{{Nord-Ouest}}']
